@@ -207,6 +207,9 @@ New Features
 * SOLR-2201: DIH's "formatDate" function now supports a timezone as an optional
   fourth parameter (James Dyer, Mark Waddle)
 
+* SOLR-4302: New parameter 'indexInfo' (defaults to true) in CoreAdmin STATUS
+  command can be used to omit index specific information (Shahar Davidson via shalin)
+
 Optimizations
 ----------------------
 
